Adjusted the style and fixed queries.

--- a/index.html
+++ b/index.html
@@ -227,38 +227,38 @@
 					<div class="col-md-4 col-sm-4 col-xs-12 wow fadeInRight" data-wow-offset="50" data-wow-delay="0.6s">
 						<div class="media">
 							<div class="media-heading-wrapper">
-								<div class="media-object">
+								<div class="media-object pull-left">
 									<i class="fa fa-flag"></i>
 								</div>
 								<h3 class="media-heading">MISSION</h3>
 							</div>
 
-								<p class="media-paragraph">Nexxus Lab Philippines makes technology accessible by lowering entry barriers. We offer competitive, value-driven pricing without industry premiums, empowering companies and individuals to create their own tech solutions.</p>
+								<p class="media-body">Nexxus Lab Philippines makes technology accessible by lowering entry barriers. We offer competitive, value-driven pricing without industry premiums, empowering companies and individuals to create their own tech solutions.</p>
 
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-4 col-xs-12 wow fadeInRight" data-wow-offset="50" data-wow-delay="0.9s">
 						<div class="media">
 							<div class="media-heading-wrapper">
-								<div class="media-object">
+								<div class="media-object pull-left">
 									<i class="fa fa-eye"></i>
 								</div>
 								<h3 class="media-heading">VISION</h3>
 							</div>
 
-								<p class="media-paragraph">Nexxus Lab Philippines envisions a world where technology is accessible to all, empowering individuals and businesses. We drive innovation and progress for our clients and country. </p>
+								<p class="media-body">Nexxus Lab Philippines envisions a world where technology is accessible to all, empowering individuals and businesses. We drive innovation and progress for our clients and country. </p>
 
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-4 col-xs-12 wow fadeInRight" data-wow-offset="50" data-wow-delay="0.6s">
 						<div class="media">
 							<div class="media-heading-wrapper">
-								<div class="media-object">
+								<div class="media-object pull-left">
 									<i class="fa fa-diamond"></i>
 								</div>
 								<h3 class="media-heading">VALUES</h3>
 							</div>
-								<p class="media-paragraph">Nexxus Lab values open communication, integrity, and reliability. We foster an inclusive, empathetic work environment with mutual support and respect.</p>
+								<p class="media-body">Nexxus Lab values open communication, integrity, and reliability. We foster an inclusive, empathetic work environment with mutual support and respect.</p>
 						</div>
 					</div>
 				</div>
@@ -282,7 +282,7 @@
     				</div>
 					<div class="col-md-6 col-sm-6 col-xs-12 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.6s">
 						<address>
-    						<p class="address-title">GET IN TOUCH WITH US</p>
+    						<p class="address-title center">GET IN TOUCH WITH US</p>
     						<span>Set a google meeting appointment with us!</span>
 					<!-- Calendly inline widget begin -->
 							<div class="calendly-inline-widget" data-url="https://calendly.com/nexxuslabtest/ask-me-anything?hide_event_type_details=1&hide_gdpr_banner=1&background_color=303030&text_color=fff" style="min-width:320px;height:700px;"></div>
