--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/nav-bar.css">
+		<link rel="stylesheet" href="static/css/style.css">
 
 
 		<script src="js/jquery.js"></script>
@@ -64,7 +65,41 @@
 			</div>
 		</nav>
 		<!-- end navigation -->
-		 
+		  <div class="chatbot-container">
+    	    <div class="chatbox">
+            <div class="chatbox__support">
+                <div class="chatbox__header">
+                    <div class="chatbox__image--header">
+                        <img src="static/images/NexxusLabLogo.png" style="max-width: 50px; max-height: 50px; border-radius: 10px;" alt="image">
+                    </div>
+                    <div class="chatbox__content--header">
+                        <h4 class="chatbox__heading--header">Chat support</h4>
+                        <p class="chatbox__description--header">Hi. My name is Nexxusbot. How can I help you?</p>
+                    </div>
+                    		<div>
+                        		<button id="reset" style="background-color: transparent; border-color: transparent;">
+                            			<img src="static/images/Illustration4.png" style="max-width: 50px; max-height: 50px; border-radius: 10px; cursor: pointer;"/>
+                        		</button>
+                    		</div>
+                		</div>
+                		<div class="chatbox__messages">
+                    		<div></div>
+                		</div>
+                			<div class="chatbox__footer">
+                    				<input type="text" placeholder="Write a message...">
+                    				<button class="chatbox__send--footer send__button">Send</button>
+               				 </div>
+            			</div>
+            			<div class="chatbox__button" style="position: fixed; margin-bottom: 45px;">
+                			<button>
+                    				<img src="static/images/NexxusLabLogo.png" style="max-width: 50px; max-height: 50px; border-radius: 10px; display: flex;"/>
+                			</button>
+            			</div>
+        		</div>
+    		</div>
+
+
+    <script type="text/javascript" src="static/js/app.js"></script>
 
     	<!-- start home -->
 		<section id="home" style="background-image: url('images/StartBackgroundPhoto.png');">
@@ -333,13 +368,12 @@
 								<input type="submit" class="form-control">
 							</form>
     					</address>
-
-						<script defer src="https://app.fastbots.ai/embed.js" data-bot-id="clxmysx4t0003ohbcbw52d8gj"></script>
     				</div>
     			</div>
     		</div>
     	</section>
     	<!-- end contact -->
+
 
         <!-- start copyright -->
         <footer id="copyright">
