Added companies and cleaner version

--- a/index.html
+++ b/index.html
@@ -71,9 +71,12 @@
     	<!-- start hero -->
 		<section id="hero" style="background-image: url('images/StartBackgroundPhoto.png');">
 			<div class="container">
-			  <div class="row text-center">
-				<div class="col-md-7">
-				  <h1 class="wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s">Leave the <span>tech</span> to us.</h1>
+				<div class="row align-items-center">
+					<div class="col-md-5 text-left">
+						<img src="/images/3DNexxusLogo.gif" alt="Company Logo" class="img-fluid">
+					</div>
+				<div class="col-md-7 text-right">
+				  <h1 class="wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s">Leave the <span><br>tech</span> to us.</h1></br>
 				  <div class="element">
 					<div class="sub-element">We are here to provide for you.</div>
 					<div class="sub-element">We are a team of developers and advisors from the Philippines.</div>
@@ -81,7 +84,10 @@
 				  </div>
 				  <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
 				  <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-				  <a href="" class="btn btn-default wow fadeInUp" data-wow-offset="50" data-wow-delay="0.6s" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/nexxuslabtest/ask-me-anything?background_color=303030&text_color=ffffff'});return false;">BOOK AN APPOINTMENT</a>
+				  <a href="" class="btn wow fadeInUp" data-wow-offset="50" data-wow-delay="0.6s" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/nexxuslabtest/ask-me-anything?background_color=303030&text_color=ffffff'});return false;">BOOK AN APPOINTMENT</a>
+				</div>
+				<div class="companies">
+
 				</div>
 			  </div>
 			</div>
