--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 		 
 
     	<!-- start hero -->
-		<section id="hero" style="background-image: url('images/StartBackgroundPhoto.png');">
+		<section id="hero" style="background-image: url('images/StartBackgroundPhoto2.png');">
 			<div class="container">
 				<div class="row align-items-center">
-					<div class="col-md-5 text-left">
-						<img src="/images/3DNexxusLogo.gif" alt="Company Logo" class="img-fluid">
+					<div class="col-md-5 text-right">
+						<img src="/images/NexxusLabLogo.png" alt="Company Logo" class="img-fluid">
 					</div>
-				<div class="col-md-7 text-right">
+				<div class="col-md-7 text-left">
 				  <h1 class="wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s">Leave the <span><br>tech</span> to us.</h1></br>
 				  <div class="element">
 					<div class="sub-element">We are here to provide for you.</div>
@@ -86,13 +86,20 @@
 				  <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
 				  <a href="" class="btn wow fadeInUp" data-wow-offset="50" data-wow-delay="0.6s" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/nexxuslabtest/ask-me-anything?background_color=303030&text_color=ffffff'});return false;">BOOK AN APPOINTMENT</a>
 				</div>
-				<div class="companies">
-
-				</div>
 			  </div>
 			</div>
+			</div>
+			<div class="companies">
+				<div class="grid">
+					<img src="/images/Companies/Company1.png">
+					<img src="/images/Companies/Company2.png">
+					<img src="/images/Companies/Company3.png">
+					<img src="/images/Companies/Company4.png">
+				</div>
 		  </section>
-    	<!-- end hero -->
+    <!-- end hero -->
+
+	<!-- End of Companies-->
 
 	<!-- start service -->
 		<section id="service">
@@ -230,10 +237,10 @@
 					<div class="col-md-12">
     					<h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">PRINCIPLES OF <span>NEXXUS LAB</span></h2>
     				</div>
-					<div class="col-md-4 col-sm-4 col-xs-12 wow fadeInRight" data-wow-offset="50" data-wow-delay="0.6s">
+					<div class="wholemedia col-md-4 col-sm-4 col-xs-12 wow fadeInRight" data-wow-offset="50" data-wow-delay="0.6s">
 						<div class="media">
 							<div class="media-heading-wrapper">
-								<div class="media-object pull-left">
+								<div class="media-object">
 									<i class="fa fa-flag"></i>
 								</div>
 								<h3 class="media-heading">MISSION</h3>
@@ -246,7 +253,7 @@
 					<div class="col-md-4 col-sm-4 col-xs-12 wow fadeInRight" data-wow-offset="50" data-wow-delay="0.9s">
 						<div class="media">
 							<div class="media-heading-wrapper">
-								<div class="media-object pull-left">
+								<div class="media-object">
 									<i class="fa fa-eye"></i>
 								</div>
 								<h3 class="media-heading">VISION</h3>
@@ -259,7 +266,7 @@
 					<div class="col-md-4 col-sm-4 col-xs-12 wow fadeInRight" data-wow-offset="50" data-wow-delay="0.6s">
 						<div class="media">
 							<div class="media-heading-wrapper">
-								<div class="media-object pull-left">
+								<div class="media-object">
 									<i class="fa fa-diamond"></i>
 								</div>
 								<h3 class="media-heading">VALUES</h3>
