--- a/index.html
+++ b/index.html
@@ -359,16 +359,23 @@
         <div class="chatbox__support">
             <div class="chatbox__header">
                 <div class="chatbox__image--header">
-                    <img src="static/images/NexxusLabLogo.png" style="max-width: 50px; max-height: 50px; border-radius: 10px;" alt="image">
+                    <img src="static/images/NexxusLabLogo.png" alt="image">
                 </div>
                 <div class="chatbox__content--header">
-                    <h4 class="chatbox__heading--header">Chat support</h4>
-                    <p class="chatbox__description--header">Hi. My name is Nexxusbot. How can I help you?</p>
+                    <h4 class="chatbox__heading--header">Nexxusbot</h4>
+                    <p class="chatbox__description--header">How can I help you?</p>
                 </div>
                 <div>
-                    <button id="reset" style="background-color: transparent; border-color: transparent;">
-                        <img src="static/images/Illustration4.png" style="max-width: 50px; max-height: 50px; border-radius: 10px; cursor: pointer;"/>
-                    </button>
+                    <table>
+                        <tr>
+                            <button id="reset" class="reset-button">
+                                <img src="static/images/Illustration5.png" />
+                            </button>
+                        </tr>
+                        <tr>
+                            <p class="chatbox__description--header2">Reset</p>
+                        </tr>
+                    </table>
                 </div>
             </div>
             <div class="chatbox__messages">
@@ -379,9 +386,9 @@
                 <button class="chatbox__send--footer send__button">Send</button>
             </div>
         </div>
-        <div class="chatbox__button" style="position: fixed; margin-bottom: 45px;">
+        <div class="chatbox__button">
             <button>
-                <img src="static/images/NexxusLabLogo.png" style="max-width: 50px; max-height: 50px; border-radius: 10px; display: flex;"/>
+                <img src="static/images/NexxusLabLogo.png" />
             </button>
         </div>
     </div>
