--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
 			  </div>
 			</div>
 			</div>
-			<div class="companies">
+			<div class="companies wow fadeIn">
+				<p class="wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s"><span>Brands</span> we work with</p>
 				<div class="grid">
 					<img src="/images/Companies/Company1.png">
 					<img src="/images/Companies/Company2.png">
