--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<div class="container">
 				<div class="row align-items-center">
 					<div class="col-md-5 text-right">
-						<img src="/images/NexxusLabLogo.png" alt="Company Logo" class="img-fluid">
+						<img src="/images/NexxusLabLogo.svg" alt="Company Logo" class="img-fluid">
 					</div>
 				<div class="col-md-7 text-left">
 				  <h1 class="wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s">Leave the <span><br>tech</span> to us.</h1></br>
@@ -92,10 +92,10 @@
 			<div class="companies wow fadeIn">
 				<p class="wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s"><span>Brands</span> we work with</p>
 				<div class="grid">
-					<img src="/images/Companies/Company1.png">
-					<img src="/images/Companies/Company2.png">
-					<img src="/images/Companies/Company3.png">
-					<img src="/images/Companies/Company4.png">
+					<img src="/images/Companies/Company1.svg">
+					<img src="/images/Companies/Company2.svg">
+					<img src="/images/Companies/Company3.svg">
+					<img src="/images/Companies/Company4.svg">
 				</div>
 		  </section>
     <!-- end hero -->
