--- a/index.html
+++ b/index.html
@@ -70,23 +70,23 @@
 
     	<!-- start hero -->
 		<section id="hero" style="background-image: url('images/StartBackgroundPhoto2.png');">
-			<div class="container">
-				<div class="row align-items-center">
+			<div class="container align-items-center">
+				<div class="row">
 					<div class="col-md-5 text-right">
-						<img src="./images/NexxusLabLogo.png" alt="Company Logo" class="img-fluid">
+						<img src="./images/NexxusLabLogo.svg" alt="Company Logo" class="img-fluid">
 					</div>
 				<div class="col-md-7 text-left">
-				  <h1 class="wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s">Leave the <span><br>tech</span> to us.</h1></br>
+				  <h1 class="wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s">Leave the <span>tech</span><br>to us.</h1></br>
 				  <div class="element">
 					<div class="sub-element">We are here to provide for you.</div>
 					<div class="sub-element">We are a team of developers and advisors from the Philippines.</div>
 					<div class="sub-element">Contact us for more inquiries.</div>
-				  </div>
-				  <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-				  <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-				  <a href="" class="btn wow fadeInUp" data-wow-offset="50" data-wow-delay="0.6s" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/nexxuslabtest/ask-me-anything?background_color=303030&text_color=ffffff'});return false;">BOOK AN APPOINTMENT</a>
-				</div>
 			  </div>
+			</div>
+			<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+			<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+			<a href="" class="btn wow fadeInUp" data-wow-offset="50" data-wow-delay="0.6s" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/nexxuslabtest/ask-me-anything?background_color=303030&text_color=ffffff'});return false;">BOOK AN APPOINTMENT</a>
+		  </div>
 			</div>
 			<div class="companies wow fadeIn">
 				<p class="wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s"><span>Brands</span> we work with</p>
