Fixed Hero Page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/nav-bar.css">
 		<link rel="stylesheet" href="css/queries.css">
+		<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+		
 		
 
 
@@ -26,6 +28,9 @@
 		<script src="js/typed.js"></script>
 		<script src="js/wow.min.js"></script>
 		<script src="js/custom.js"></script>
+		<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+		<script defer src="https://app.fastbots.ai/embed.js" data-bot-id="clxmysx4t0003ohbcbw52d8gj"></script>
+		<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
 		
 		<body id="top">
 
@@ -73,7 +78,7 @@
 			<div class="container align-items-center">
 				<div class="row">
 					<div class="col-md-5 text-right">
-						<img src="./images/NexxusLabLogo.png" alt="Company Logo" class="img-fluid">
+						<img src="./images/NexxusLabLogo.svg" alt="Company Logo" class="img-fluid">
 					</div>
 				<div class="col-md-7 text-left">
 				  <h1 class="wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s">Leave the <span><br>tech</span> to us.</h1></br>
@@ -83,10 +88,9 @@
 					<div class="sub-element">Contact us for more inquiries.</div>
 			  </div>
 			</div>
-			<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-			<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
 			<a href="" class="btn wow fadeInUp" data-wow-offset="50" data-wow-delay="0.6s" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/nexxuslabtest/ask-me-anything?background_color=303030&text_color=ffffff'});return false;">BOOK AN APPOINTMENT</a>
 		  </div>
+		  
 			</div>
 			<div class="companies wow fadeIn">
 				<p class="wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s"><span>Brands</span> we work with</p>
@@ -349,7 +353,6 @@
     						<span>Set a google meeting appointment with us!</span>
 					<!-- Calendly inline widget begin -->
 							<div class="calendly-inline-widget" data-url="https://calendly.com/nexxuslabtest/ask-me-anything?hide_event_type_details=1&hide_gdpr_banner=1&background_color=303030&text_color=fff" style="min-width:320px;height:700px;"></div>
-							<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
 					<!-- Calendly inline widget end -->
 						</address>
 					</div>
@@ -371,8 +374,6 @@
 								<input type="submit" class="form-control">
 							</form>
     					</address>
-
-						<script defer src="https://app.fastbots.ai/embed.js" data-bot-id="clxmysx4t0003ohbcbw52d8gj"></script>
     				</div>
     			</div>
     		</div>
