--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 						<img src="./images/NexxusLabLogo.svg" alt="Company Logo" class="img-fluid">
 					</div>
 				<div class="col-md-7 text-left">
-				  <h1 class="wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s">Leave the <span><br>tech</span> to us.</h1></br>
+				  <h1 class="wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s">Leave the <span>tech</span> to us.</h1>
 				  <div class="element">
 					<div class="sub-element">We are here to provide for you.</div>
 					<div class="sub-element">We are a team of developers and advisors from the Philippines.</div>
