--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 				<div class="footer-widget">
 				  <div class="widget-about">
 					<img src="/images/LOGO NexxusLab.png" alt="" class="img-fluid">
-					<p>Copyright © 2024 by Nexxus Lab All rights reserved.</p>
+					<p class="copyright">Copyright © 2024 by Nexxus Lab All rights reserved.</p>
 					<ul class="social-icon">	
 						<li><a href="#" class="fa fa-facebook"></a></li>
 						<li><a href="#" class="fa fa-instagram"></a></li>
