--- a/index.html
+++ b/index.html
@@ -46,14 +46,9 @@
     	<!-- end preloader -->
 
     	<!-- start navigation -->
-		<nav class="navbar navbar-default templatemo-nav" role="navigation">
+		<nav class="navbar navbar-default tempaltemo-nav" role="navigation">
 			<div class="container">
 				<div class="navbar-header">
-					<button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-						<span class="icon icon-bar"></span>
-						<span class="icon icon-bar"></span>
-						<span class="icon icon-bar"></span>
-					</button>
 					<a href="#top" class="navbar-brand">
 						<img src="images/NexxusLabLogo.png" alt="Company Logo" class="logo">NEXXUS LAB</a>
 					</div>
@@ -391,7 +386,7 @@
 				<div class="footer-widget">
 				  <div class="widget-about">
 					<img src="/images/LOGO NexxusLab.png" alt="" class="img-fluid">
-					<p class="copyright">Copyright © 2024 by Nexxus Lab All rights reserved.</p>
+					<p class="copyright">Copyright © 2024 by Nexxus Lab, All rights reserved.</p>
 					<ul class="social-icon">	
 						<li><a href="#" class="fa fa-facebook"></a></li>
 						<li><a href="#" class="fa fa-instagram"></a></li>
@@ -401,16 +396,15 @@
 					</ul>
 				  </div>
 				</div>
-				<!-- Ends: .footer-widget -->
 			  </div>
-			  <!-- end /.col-md-4 -->
+
 			  <div class="col-md-3 col-sm-4">
 				<div class="footer-widget">
 				  <div class="footer-menu footer-menu--1">
 					<h4 class="footer-widget-title">Contact Us </h4>
 					<ul>
 					  <li>
-						<a>Salcedo St., Legaspi Village Makati City 1299, Philippines</a>
+						<a href="https://www.google.com/maps/place/Salcedo,+Legazpi+Village,+Makati,+Kalakhang+Maynila/@14.5557701,121.0146225,17z/data=!4m6!3m5!1s0x3397c90dddabdcd5:0x444d8d85b989df55!8m2!3d14.556767!4d121.0153735!16s%2Fg%2F1tx_3x9t?entry=ttu" target="_blank">Salcedo St., Legaspi Village Makati City 1299, Philippines</a>
 					  </li>
 					  <li>
 						<a>+63 927-143-0884
@@ -421,11 +415,8 @@
 					  </li>
 					</ul>
 				  </div>
-				  <!-- end /.footer-menu -->
 				</div>
-				<!-- Ends: .footer-widget -->
 			  </div>
-			  <!-- end /.col-md-3 -->
 	  
 			  <div class="col-md-3 col-sm-4">
 				<div class="footer-widget">
@@ -433,21 +424,18 @@
 					<h4 class="footer-widget-title">Our Company</h4>
 					<ul class="mini-texts">
 					  <li>
-						<a href="#">About Us</a>
+						<a href="#team">About Us</a>
 					  </li>
 					  <li>
-						<a href="#">Services</a>
+						<a href="#service">Services</a>
 					  </li>
 					  <li>
-						<a href="#">Contact Us</a>
+						<a href="#contact">Contact Us</a>
 					  </li>
 					</ul>
 				  </div>
-				  <!-- end /.footer-menu -->
 				</div>
-				<!-- Ends: .footer-widget -->
 			  </div>
-			  <!-- end /.col-lg-3 -->
 	  
 			  <div class="col-md-3 col-sm-4">
 				<div class="footer-widget">
@@ -458,22 +446,17 @@
 						<a href="#">Partnerships</a>
 					  </li>
 					  <li>
-						<a href="#">Projects</a>
+						<a href="#portfolio">Projects</a>
 					  </li>
 					</ul>
 				  </div>
-				  <!-- end /.footer-menu -->
 				</div>
-				<!-- Ends: .footer-widget -->
 			  </div>
-			  <!-- Ends: .col-lg-3 -->
+			  
 	  
 			</div>
-			<!-- end /.row -->
 		  </div>
-		  <!-- end /.container -->
 		</div>
-		<!-- end /.footer-big -->
 	  </footer>
 	</section>
 		<!-- footer ends -->
