--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 		<link rel="stylesheet" href="css/animate.min.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/font-awesome.min.css">
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/nav-bar.css">
 		<link rel="stylesheet" href="css/queries.css">
 		<link rel="stylesheet" href="css/chatbot.css">
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
 		<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
 	
 
@@ -46,7 +46,7 @@
     	<!-- end preloader -->
 
     	<!-- start navigation -->
-		<nav class="navbar navbar-default tempaltemo-nav" role="navigation">
+		<nav class="navbar navbar-default templatemo-nav" role="navigation">
 			<div class="container">
 				<div class="navbar-header">
 					<a href="#top" class="navbar-brand">
@@ -475,6 +475,8 @@
 	</div>
 </div>
 
+<!-- Chatbot -->
+
 <div class="chatbot-container">
     <div class="chatbox">
         <div class="chatbox__support">
@@ -515,6 +517,8 @@
     </div>
 </div>
 <script type="text/javascript" src="js/chatbot.js"></script>
+
+<!-- Chatbot -->
 
 	</body>
 </html>
