--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
 		<nav class="navbar navbar-default templatemo-nav" role="navigation">
 			<div class="container">
 				<div class="navbar-header">
+					<button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+						<span class="icon icon-bar"></span>
+						<span class="icon icon-bar"></span>
+						<span class="icon icon-bar"></span>
+					</button>
 					<a href="#top" class="navbar-brand">
 						<img src="images/NexxusLabLogo.png" alt="Company Logo" class="logo">NEXXUS LAB</a>
 					</div>
@@ -385,7 +390,7 @@
 			  <div class="col-md-3 col-sm-12">
 				<div class="footer-widget">
 				  <div class="widget-about">
-					<img src="/images/LOGO NexxusLab.png" alt="" class="img-fluid">
+					<img src="images/LOGO NexxusLab.png" alt="" class="img-fluid">
 					<p class="copyright">Copyright © 2024 by Nexxus Lab, All rights reserved.</p>
 					<ul class="social-icon">	
 						<li><a href="#" class="fa fa-facebook"></a></li>
